2009-01-07
	* configure.in: check for krb5_change_password, krb5_set_password,
	krb5_xfree

2009-12-11
	* Makefile.am,configure.ac: relegate use of RPM to the 'archive'
	target, don't use it in our regular build machinery
	* configure.ac,src/options.c,src/stash.c,src/v4.c,src/v5.c: add a
	'multiple_ccaches' option, and change the default behavior from on
	to off
	* configure.ac,src/options.c: allow setting a default value for
	chpw_prompt

2009-11-10
	* src/harness.c: we're not using our internal logging stuff, so we can
	eject most of the Kerberos-specific bits

2009-10-07
	* src/prompter.c(_pam_krb5_prompt_type): add, abstracting out an
	API difference.
	* src/prompter.c(_pam_krb5_generic_prompter): use prompt type
	information to override prompt text for new passwords.  Change saving
	of the PAM_AUTHTOK so that we do so only when we've asked for both a
	new password and confirmation.  Fix what might have been a bug in
	how we number responses when we're asked for the current password and
	we're suppressing such requests in unknown cases where libkrb5 could
	ask both for the current and new passwords.
	* src/tokens.c,src/minikafs.c,src/afs5log.c,src/options.c: fix some
	signedness warnings

2009-10-05
	* src/prompter.c(_pam_krb5_prompt_is_for_password): check the
	prompt_type first.

2009-10-05
	* src/options.c(_pam_krb5_options_init): parse the "chpw_prompt"
	flag
	* src/initopts.c(_pam_krb5_set_init_opts): enable or disable
	change-expired-password behavior based on the chpw_prompt setting
	rather than forcing it off all of the time
	* src/prompter.c(_pam_krb5_generic_prompter): when we're letting the
	library attempt to change expired passwords, set PAM_AUTHTOK to
	what the user typed in

2009-06-26
	* src/options.c(option_b): don't leak the list of values

2009-06-26
	* src/sly.c(_pam_krb5_sly_maybe_refresh): refresh creds in the default
	ccache location when KRB5CCNAME isn't set in the environment (#507984)

2009-06-26