@@ -1,6 +1,9 @@
 2009-01-07
 	* configure.in: check for krb5_change_password, krb5_set_password,
 	krb5_xfree
+	* src/v5.c: add v5_change_password(); make v5_free_unparsed_name()
+	call krb5_xfree(), if it exists, in preference over
+	krb5_free_unparsed_name() or free()
 
 2009-12-11
 	* Makefile.am,configure.ac: relegate use of RPM to the 'archive'
